--- a/brk/etl/README
+++ b/brk/etl/README
@@ -22,9 +22,11 @@ Meer over Stetl: http://stetl.org
 Downloaden GML
 --------------
 
-Met het hulpscript download-brk.sh <doel map> kan de BRK-DKK eerst gedownload worden naar een doel map.
-Windows: download-brk.cmd <doel map>
-NB, soms zijn de gedonwloade files 0 bytes. Oorzaak is vreemd HTTPS probleem PDOK vermoedelijk.
+Met het hulpscript download-brk.sh <doelmap> kan de BRK-DKK eerst gedownload worden naar een doelmap.
+Windows: download-brk.cmd <doelmap>
+NB, soms zijn de gedownloade files 0 bytes. Oorzaak is vreemd HTTPS probleem PDOK vermoedelijk. Dit is
+ondervangen door het downloaden met wget in een loop uit te voeren en vervolgens met unzip de inhoud
+te controleren.
 
 Op Windows heb je wget en unzip nodig om de bestanden te downloaden. De executables hiervan moeten in de
 PATH environment variabele staan.
@@ -37,7 +39,7 @@ Commando
 ./etl-brk.sh
 Windows: etl-brk.cmd
 
-Gebruikt default opties (database params etc) uit options/default.args
+Gebruikt default opties (database params etc) uit options/default.args.
 
 Stetl configuratie, hoeft niet gewijzigd, alleen indien bijv andere output gewenst:
 conf/etl-brk.cfg
@@ -47,18 +49,20 @@ Opties/argumenten
 
 Een aantal opties kunnen op 2 manieren vervangen worden:
 
-1- Impliciet: Overrule default opties (database params etc) met een eigen lokale file gebaseerd op lokale hostnaam:
-options/<jouw host naam>.args
+1- Impliciet: Overrule default opties (database params etc) met een eigen lokale file gebaseerd op
+lokale hostnaam: options/<jouw host naam>.args
 
 2- Expliciet op command line via  ./etl-brk.sh <mijn opties file>.args
                                   etl-brk.cmd <mijn opties file>.args
 
-Indien methode 2 gebruikt wordt prevaleert deze boven 1 en de default opties!
+Indien methode 2 gebruikt wordt, prevaleert deze boven 1 en de default opties!
 
 Database mapping
 ----------------
-gfs/brk.gfs is GDAL/OGR "GFS Template" en bepaalt de mapping van GML elementen/attributen naar PostGIS kolom(namen).
-Maak evt eigen GFS file en specificeer deze in je options/<jouw host naam>.args: bijv gfs_template=gfs/mijnbrk.gfs
+gfs/brk.gfs is de GDAL/OGR "GFS Template" en bepaalt de mapping van GML elementen/attributen
+naar PostGIS kolom(namen). Maak eventueel een eigen GFS file en specificeer deze in je
+options/<jouw host naam>.args: bijv gfs_template=gfs/mijnbrk.gfs
 
-GUI
-
+TODO
+----
+* GUI
