--- a/top10nl/etl/README
+++ b/top10nl/etl/README
@@ -19,17 +19,36 @@ http://www.stetl.org/en/latest/install.html
 
 Meer over Stetl: http://stetl.org
 
-Commando:
+Commando
+--------
 
-./etl-top10.sh
+./etl-top10nl.sh
+Windows: etl-top10nl.cmd
 
-Opties zetten:
-maak een eigen lokale file:
-options/options-<jouw host naam>.sh
+Gebruikt default opties (database params etc) uit options/default.args.
 
 Stetl configuratie, hoeft niet gewijzigd, alleen indien bijv andere output gewenst:
-etl-top10nl.cfg
+conf/etl-top10nl-v1.2.cfg
 
+Opties/argumenten
+-----------------
 
-TODO:
+Een aantal opties kunnen op 2 manieren vervangen worden:
+
+1- Impliciet: Overrule default opties (database params etc) met een eigen lokale file gebaseerd op
+lokale hostnaam: options/<jouw host naam>.args
+
+2- Expliciet op command line via  ./etl-top10nl.sh <mijn opties file>.args
+                                  etl-top10nl.cmd <mijn opties file>.args
+
+Indien methode 2 gebruikt wordt, prevaleert deze boven 1 en de default opties!
+
+Database mapping
+----------------
+gfs/top10-v1.2.gfs is de GDAL/OGR "GFS Template" en bepaalt de mapping van GML elementen/attributen
+naar PostGIS kolom(namen). Maak eventueel een eigen GFS file en specificeer deze in je
+options/<jouw host naam>.args: bijv gfs_template=gfs/mijntop10.gfs
+
+TODO
+----
 * GUI
