Add Gitter link

--- a/README
+++ b/README
@@ -76,3 +76,5 @@ nieuwe zaken zien of vind je fouten ? Gebruik de "issues" link hierboven.
 
 
 
+
+Join the chat at https://gitter.im/nlextract/NLExtract
