--- a/bgt/README
+++ b/bgt/README
@@ -9,4 +9,4 @@ Documentatie vind je op: http://nlextract.readthedocs.org
 
 Belangrijke wijzigingen
 -----------------------
-* 23-12-2015: initiële versie, maakt gebruik van Stetl ETL, zie map "etl".
+* 23-12-2015: initiÃ«le versie, maakt gebruik van Stetl ETL, zie map "etl".
