Updated readme BGT

--- a/bgt/etl/README
+++ b/bgt/etl/README
@@ -1,6 +1,5 @@
 BGT / IMGeo inlezen met Stetl (www.stetl.org) ETL framework.
-door: Just van den Broecke,
-GFS en XSLT door Just van den Broecke en Frank Steggink
+door: Just van den Broecke en Frank Steggink
 
 Deze map bevat de ETL configuratie en commando om via Stetl
 BGT / IMGeo vanuit de bron GML bestanden naar verschillende outputs weg te schrijven.
