--- a/bgt/README
+++ b/bgt/README
@@ -10,3 +10,4 @@ Documentatie vind je op: http://nlextract.readthedocs.org
 Belangrijke wijzigingen
 -----------------------
 * 23-12-2015: initiële versie, maakt gebruik van Stetl ETL, zie map "etl".
+* 01-03-2018: BgtExtract omgebouwd naar OGR-only versie, zonder XSLT.
