--- a/brt/top250nl/etl/README
+++ b/brt/top250nl/etl/README
@@ -1,6 +1,5 @@
 TOP250NL inlezen met Stetl (www.stetl.org) ETL framework.
-door: Just van den Broecke,
-GFS en XSLT door Frank Steggink
+door: Just van den Broecke en Frank Steggink
 
 Deze map bevat de ETL configuratie en commando om via Stetl
 TOP250NL vanuit de bron GML bestanden naar verschillende outputs weg te schrijven.
