--- a/brt/top500nl/etl/README
+++ b/brt/top500nl/etl/README
@@ -1,9 +1,8 @@
-TOP250NL inlezen met Stetl (www.stetl.org) ETL framework.
-door: Just van den Broecke,
-GFS en XSLT door Frank Steggink
+TOP500NL inlezen met Stetl (www.stetl.org) ETL framework.
+door: Just van den Broecke en Frank Steggink
 
 Deze map bevat de ETL configuratie en commando om via Stetl
-TOP250NL vanuit de bron GML bestanden naar verschillende outputs weg te schrijven.
+TOP500NL vanuit de bron GML bestanden naar verschillende outputs weg te schrijven.
 Standaard is dit PostGIS, maar omdat output via ogr2ogr verloopt kan dit
 elke output zijn die ogr2ogr ondersteunt, bijv SHP, GeoJSON of GeoPackage, in theorie ook bijv Oracle.
 
@@ -22,13 +21,13 @@ Meer over Stetl: http://stetl.org
 Commando
 --------
 
-./etl-top250nl.sh
-Windows: etl-top250nl.cmd
+./etl-top500nl.sh
+Windows: etl-top500nl.cmd
 
 Gebruikt default opties (database params etc) uit options/default.args.
 
 Stetl configuratie, hoeft niet gewijzigd, alleen indien bijv andere output gewenst:
-conf/etl-top250nl-v1.2.1.cfg
+conf/etl-top500nl-v1.2.1.cfg
 
 Opties/argumenten
 -----------------
@@ -38,16 +37,16 @@ Een aantal opties kunnen op 2 manieren vervangen worden:
 1- Impliciet: Overrule default opties (database params etc) met een eigen lokale file gebaseerd op
 lokale hostnaam: options/<jouw host naam>.args
 
-2- Expliciet op command line via  ./etl-top250nl.sh <mijn opties file>.args
-                                  etl-top250nl.cmd <mijn opties file>.args
+2- Expliciet op command line via  ./etl-top500nl.sh <mijn opties file>.args
+                                  etl-top500nl.cmd <mijn opties file>.args
 
 Indien methode 2 gebruikt wordt, prevaleert deze boven 1 en de default opties!
 
 Database mapping
 ----------------
-gfs/top250-v1.2.1.gfs is de GDAL/OGR "GFS Template" en bepaalt de mapping van GML elementen/attributen
+gfs/top500-v1.2.1.gfs is de GDAL/OGR "GFS Template" en bepaalt de mapping van GML elementen/attributen
 naar PostGIS kolom(namen). Maak eventueel een eigen GFS file en specificeer deze in je
-options/<jouw host naam>.args: bijv gfs_template=gfs/mijntop250.gfs
+options/<jouw host naam>.args: bijv gfs_template=gfs/mijntop500.gfs
 
 TODO
 ----
