--- a/brt/top50nl/etl/README
+++ b/brt/top50nl/etl/README
@@ -1,6 +1,5 @@
 TOP50NL inlezen met Stetl (www.stetl.org) ETL framework.
-door: Just van den Broecke,
-GFS en XSLT door Frank Steggink
+door: Just van den Broecke en Frank Steggink
 
 Deze map bevat de ETL configuratie en commando om via Stetl
 TOP50NL vanuit de bron GML bestanden naar verschillende outputs weg te schrijven.
