--- a/brt/top50nl/README
+++ b/brt/top50nl/README
@@ -10,3 +10,16 @@ Documentatie vind je op: http://nlextract.readthedocs.org
 Belangrijke wijzigingen:
 * 15-01-2018: initiële versie.
 * 01-03-2018: Top50Extract omgebouwd naar OGR-only versie, zonder XSLT.
+
+Stappen: 
+
+Dependencies instaleren zie docs.nlextract.nl/en/latest/stetl-framework.html
+
+Voor postgres export: database nodig
+
+zip downloaden en in folder plempen
+
+stetl configureren:
+ etl/options/default.args kopieren naar etl/options/<hostname>.args
+ 
+ bash scriptje runnen
