--- a/bag/README
+++ b/bag/README
@@ -3,7 +3,7 @@ bag-extract is onderdeel van de NLExtract tools voor het inlezen en verrijken va
 
 De BAG Leveringsbestanden (totaal plm 1.2 GB .zip) worden iedere maand ververst en zijn te downloaden via deze  
 link: http://geodata.nationaalgeoregister.nl/inspireadressen/atom/inspireadressen.xml (Atom feed).
-Als je wilt testen met een kleiner bestand kun je via http://www.nlextract.nl/file-cabinet
+Als je wilt testen met een kleiner bestand kun je via https://data.nlextract.nl/bag/bron/BAG_Amstelveen_2011feb01.zip
 ook de "BAG Amstelveen" (5.6 MB) downloaden.
 
 bag-extract biedt de volgende functionaliteiten:
